<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/appBarLayout">

		<com.google.android.material.appbar.MaterialToolbar
		android:id="@+id/topAppBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="?attr/actionBarSize"
		app:title="@string/app_name"
		app:menu="@menu/options_menu" />

	</com.google.android.material.appbar.AppBarLayout>

	<de.hambuch.voronoiapp.VoronoiView
		android:id="@+id/voronoiview"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"/>

	<HorizontalScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/appBarLayout">
		<com.google.android.material.chip.ChipGroup
			android:id="@+id/chipGroup"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingStart="2dp"
			android:paddingEnd="2dp"
			app:singleLine="true"
			app:selectionRequired="true">

			<com.google.android.material.chip.Chip
				android:id="@+id/filter_voronoi"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/Widget.Material3.Chip.Filter"
				android:checked="true"
				android:contentDescription="@string/text_voronoi"
				android:text="@string/text_voronoi"/>

			<com.google.android.material.chip.Chip
				android:id="@+id/filter_voronoicolor"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/Widget.Material3.Chip.Filter"
				android:checked="false"
				android:contentDescription="@string/text_voronoicolor"
				android:visibility="gone"
				android:text="@string/text_voronoicolor"/>

			<com.google.android.material.chip.Chip
				android:id="@+id/filter_delaunay"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/Widget.Material3.Chip.Filter"
				android:checked="false"
				android:contentDescription="@string/text_delaunay"
				android:text="@string/text_delaunay"/>

			<com.google.android.material.chip.Chip
				android:id="@+id/filter_convex"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/Widget.Material3.Chip.Filter"
				android:checked="false"
				android:contentDescription="@string/text_convex"
				android:text="@string/text_convex"/>

			<com.google.android.material.chip.Chip
				android:id="@+id/filter_circle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/Widget.Material3.Chip.Filter"
				android:checked="false"
				android:contentDescription="@string/text_circle"
				android:text="@string/text_circle"/>
		</com.google.android.material.chip.ChipGroup>
	</HorizontalScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>